--- a/5 UDP and its applications/UDP and its applications.tex
+++ b/5 UDP and its applications/UDP and its applications.tex
@@ -93,6 +93,7 @@
 \renewcommand{\footrulewidth}{1pt}				% Remove footer underlines
 \setlength{\headheight}{13.6pt}
  
+\usepackage{tikz}
 
 \begin{document}
 \selectlanguage{english}
@@ -103,38 +104,56 @@
 %\tableofcontents
 
 \pagebreak
+\section*{Using the sock program}
+	In this lab, you will not need to a router, only two workstations and one hub to connect two host together.
+	\begin{table}[H]
+        \caption{Host IP addresses for Fig. 5.0}
+        \vspace{5pt}
+        \centering
+        \large
+        \begin{tabular}{ *4l }
+            \hline \hline
+            \multicolumn{2}{c}{HOST\_A} & \multicolumn{2}{c}{HOST\_B} \\
+            Name & Ip Address & Name & IP Address \\
+            \hline 
+            h0(shakti) & 128.238.61.100/24 & h1(vayu) & 128.238.61.101/24\\
+            \hline \hline
+            \end{tabular}
+    \end{table}
 
-\section{Echo Service}
-	Use the following commands in \texttt{h1} and \texttt{h2} to observe the basic operation of \textbf{socket}\footnote{Basic command is sock use alternative socket (rename of sock)} and echo service. \\
+    \begin{figure}[H]
+        \centering
+        \begin{tikzpicture}[font=\sf]
+            \node[draw] (h1) at (-2,-2){HOST\_A};
+            \node[draw,circle] (hub) at (0,0){Hub};
+            % \node[draw,rounded corners] (router) at (0,0){\shortstack{Router}};
+            % \node[draw,circle] (hub1) at (2,0){Switch 1};
+            \node[draw] (h0) at (2,-2){HOST\_B};
+        
+            \draw[thick] (h0) -- (2,0);
+            \draw[thick] (h1) -- (-2,0);
+            \draw[thick] (2,0) -- (hub);
+            \draw[thick] (-2,0) -- (hub);
+        \end{tikzpicture}
+        \caption{\textbf{Figure 5.0.} Simple router experiment.}        
+    \end{figure}
+
+\section{Socket operation}
+	Use the following commands in \texttt{h1} and \texttt{h2} to observe the basic operation of \textbf{socket}\footnote{Basic command is sock use alternative socket (rename of sock)} and echo service.
 	\begin{itemize}
 		\item \textbf{socket [-u] \textit{host} echo}\footnote{type any text in socket and press enter}
 		\item \textbf{socket -s 5555}
-		\item \textbf{socket -i -n3 -w2048 \textit{host} 5555}
+		\item \textbf{socket -i -n3 -w2048 \textit{server-host} 5555}
 	\end{itemize}
 
 	\subsection*{Report}
 	Explain the operation of each command.
 
-\section{Socket Server}
-	Use following command to run a server and send packet to server.
-	\begin{itemize}
-		\item \textbf{socket -u -s 5555}
-		\item \textbf{socket -u -i -n3 -w2048 \textit{server-host} 5555}
-	\end{itemize}
-
-	\subsection*{Report}
-	Explain the operation of each command.\\
-	Show packet in tcpdump. What you see in transmitted packet?\\
-	What is different between packet in client and server?\\
-	What is different between generated packet and sended packet?
-
-	%\pagebreak
-	\section{socket -h}
+\section{socket -h}
 	Study various options associated with the \textbf{socket} program.
 	A brief list of options can be displayed by typing \textbf{socket}. More detailed discussion on sock can be found in
 	Appendix C of [5] in the reference book.
 
-%\pagebreak
 \section{Segment size}
 	While running \textbf{tcpdump src host \textit{your host}} on \texttt{h2}, execute the following command with different values of size (i.e., the size of the datagram). \\
 	\begin{itemize}
@@ -174,13 +193,12 @@
 	What is the maximum size of user data in a UDP datagram that the system can send or receive, even when fragmentation is allowed?
 
 
-
 \section*{Path MTU discovery exercise}
 	Connect the routers and the workstations as shown in \autoref{fig:5.5} (Fig 5.5) Change the IP
 	addresses of your workstation accordingly. Note that the router IP addresses are
 	the same as their default.\\
-	Open console of  each router, enable RIP routing (see Section 4.6 of reference book).\\
-	Change the MTU of the ethernet1 interfaces of Router2 and Router4 to 500
+	Open console of  each router, enable \textbf{RIP} routing (see Section 4.6 of reference book).\\
+	Change the \textbf{MTU} of the \texttt{ethernet1} interfaces of \texttt{Router4} to 500
 	bytes.
 	\begin{itemize}
 		\item \texttt{R1(config-if)\#\textbf{ip mtu 500}}
@@ -216,7 +234,6 @@
    We will use the \texttt{get} command to retrieve files from a remote host.
    When FTP is used, you need to change directory to \texttt{/home/netlab/} by \textbf{cd} \texttt{/home/netlab} before retrieving the file.
    If you don’t know how to use \textbf{tftp}, refer to its manual page.
-
 
 
 %\pagebreak
