--- a/6 TCP study/TCP and its applications.tex
+++ b/6 TCP study/TCP and its applications.tex
@@ -75,7 +75,6 @@
     \normalsize \href{mailto:m.borhani@ut.ac.ir}{Muhammad Borhani} - \FR{محمد برهانی}\\
 	\normalsize \href{mailto:a.a.khordadi@ut.ac.ir}{Amirahmad Khordadi} - \FR{امیر احمد خردادی}\\
 	\normalsize \href{mailto:sina\_kashipazha@ut.ac.ir}{Sina Kashi pazha} - \FR{سینا کاشی پزها}\\
-	\normalsize \href{mailto:mashahsavand@ut.ac.ir}{Mohammad Ali Shahsavand} - \FR{محمد علی شاهسوند}
 }
 
 \date{\vspace{30pt}\today\\\vspace{10pt}{\selectlanguage{farsi}\today}}
@@ -104,174 +103,137 @@
 %\tableofcontents
 
 \pagebreak
-%Arabic \AR{\allah}
-%Persian \FR{فروشگاه}
-%Arabic \foreignlanguage{arabic}{كحض}
-%Persian \foreignlanguage{farsi}{فروشگاه}
 
+\section*{Exercises on TCP connection control}
+    Like previous lab, connect two host with one hub together.
 
-
-%	يعود تاريخ علوم الحاسوب إلى 
-%\chapter
-%\section
-%\subsubsection
-%\subsection
-%\section
-%\chapter
-%\part
-%\caption
-%\end{otherlanguage}
-
-\section{Initialization}
-    SSH to your machine\footnote{e.g.\ 172.18.33.52} use command-line or other solutions\footnote{Putty, Mobaxterm, \ldots} with enabled X11-forwarding: \\
-    \centerline{\$ \textbf{ssh -X} \texttt{mininet@\textit{<your-vm-ip-address>}}} \\
-    Enter \texttt{mininet} as password.\\
-    Run mininet with default topology:
-    \begin{itemize}
-    	\setlength{\itemindent}{30pt}
-        \item [mininet>] \textbf{sudo mn}
-        \item [hint:] you can add link delay to see network process and have better experience. command: \textbf{sudo mn $\cdots$ {-}{-}link tc,delay=10ms}  
-    \end{itemize}
-
-\section*{Telnet terminal}
-	Execute following commands: \\
-	\begin{itemize}
-		\item [h2>] \textbf{/etc/init.d/xinetd restart}
-		\item [h1>] \textbf{wireshark \&}
-		\item [h1>] \textbf{telnet} \textit{10.0.0.2}
-	\end{itemize}
+\section{Telnet terminal}
+    While \textbf{tcpdump -S host \textit{your\_host} and \textit{remote\_host}} is running, execute: \textbf{telnet \textit{remote\_host} date}.
+    Save the tcpdump output.
 	\subsection*{Report}
 	\begin{enumerate}
-		\item Explain TCP connection establishment and termination using the wireshark output.
-		\item What were the announced MSS values for the two hosts? \\
-		\item What happens if there is an intermediate network that has an MTU less than the MSS of each host? \\
-		See if the \texttt{DF} flag was set in wireshark output.\\
+		\item Explain TCP connection establishment and termination using the tcpdump output.
+		\item What were the announced MSS values for the two hosts?
+		\item What happens if there is an intermediate network that has an MTU less than the MSS of each host?
+		See if the \texttt{DF} flag was set in tcpdump output.
 		\textit{you can change interface \textbf{MTU} with} \textbf{sudo ifconfig \$ETH mtu 1400}
 	\end{enumerate}
     
-
-    %\pagebreak
-\section*{TCP vs UDP}
-	Use \textbf{socket}\footnote{Basic command is sock use alternative socket (linked to sock)} to send a UDP datagram to \texttt{h2}: \\
+\section{TCP vs UDP connection establishment}
+    While \textbf{tcpdump -nx host \textit{your\_host} and \textit{remote\_host}} is running, use \textbf{socket}\footnote{Basic command is sock use alternative socket (linked to sock)} to send a UDP datagram to \texttt{h2}:
 	\begin{itemize}
-		\item [h2>] \textbf{socket -u -s 8888}
-		\item [h1>] \textbf{wireshark \&}
-		\item [h1>] \textbf{socket -u -i -n1} \textit{10.0.0.2} \textbf{8888}
+		\item \textbf{socket -u -s \textit{remote\_host} 8888}
 	\end{itemize}
-    \underline{Save}\footnote{Take snapshot and save image} the \textbf{wireshark} output for your lab report. \\
-	Restart the above \textbf{wireshark} command, execute \textbf{socket} in the TCP mode: \\
+    \underline{Save} the \textbf{tcpdump} or \textbf{wireshark} output for your lab report. \\
+	Restart the above \textbf{tcpdump} command, execute \textbf{socket} in the TCP mode:
 	\begin{itemize}
-		\item [h2>] \textbf{socket -s 8888}
-		\item [h1>] \textbf{wireshark \&} \\
-		\item [h1>] \textbf{socket -i -n1} \textit{10.0.0.2} \textbf{8888} \\
+		\item [h1>] \textbf{socket -i -n1} \textit{host} \textbf{8888}
 	\end{itemize}
-    \underline{Save} the \textbf{wireshark} output for your lab report.
+    \underline{Save} the \textbf{tcpdump} output for your lab report.
     \subsection*{Report}
     \begin{enumerate}
-        \item Explain what happened in both the UDP and TCP cases.
-        \item When a client requests a non-existing server (e.g. \textit{10.0.0.3}), how do UDP and TCP handle this request, respectively?
-
+        \item Explain what happened in both the UDP and TCP cases. When a client requests a non-existing server, how do UDP and TCP handle this request, respectively?
     \end{enumerate}
-    
-    %\pagebreak
-\section*{MSS and MTU}
-    Issue following commands:
+
+\section*{Exercise on TCP interactive data flow}
+\section{MSS and MTU}
+While tcpdump is capturing the traffic between your machine and a remote machine, issue following commands:
     \begin{itemize}
-    	\item [h2>] \textbf{/etc/init.d/xinetd restart}
-        \item [h1>] \textbf{wireshark \&}
-        \item [h1>] \textbf{telnet} \textit{10.0.0.2}
+        \item [h1>] \textbf{tcpdump -nv} or run \textbf{wireshark}
+        \item [h1>] \textbf{telnet} \textit{host}
     \end{itemize}
     After logging in to the host, type \texttt{date} and press the \texttt{Enter} key. \\
     Now, in order to generate data faster than the round-trip time of a single byte to be sent and echoed, type any sequence of keys in the \textbf{telnet} window very rapidly\footnote{for example hold "A" key or write "qwertyuiop" in telnet window.}. \\
-    \underline{Save} the \textbf{wireshark} output for your lab report.
+    \underline{Save} the \textbf{tcpdump} output for your lab report.
     \subsection*{Report}
-    Answer the following questions, based upon the \textbf{wireshark} output saved in the above exercise.
+    Answer the following questions, based upon the \textbf{tcpdump} output saved in the above exercise.
     \begin{enumerate}
         \item What is a delayed acknowledgement?
         What is it used for?
-        \item Can you see any delayed acknowledgements in your \textbf{wireshark} output? \\
+        \item Can you see any delayed acknowledgements in your \textbf{tcpdump} output? \\
         If yes, explain the reason.
-        Mark some of the lines with delayed acknowledgements, and submit the \textbf{wireshark} output with your report. \\
-        Explain how the delayed ACK timer operates from your \textbf{wireshark} output. \\
+        Mark some of the lines with delayed acknowledgements, and submit the \textbf{tcpdump} output with your report. \\
+        Explain how the delayed ACK timer operates from your \textbf{tcpdump} output. \\
         If you don’t see any delayed acknowledgements, explain the reason why none was observed.
-        \item What is the \textbf{Nagle} algorithm used for? \\
-        From your \textbf{wireshark} output, can you tell whether the Nagle algorithm is enabled or not?
+        \item What is the \textbf{Nagle}\footnote{Nagle Algorithm is a means of improving the efficiency of TCP/IP networks by reducing the number of packets that need to be sent over the network.} algorithm used for? \\
+        From your \textbf{tcpdump} output, can you tell whether the Nagle algorithm is enabled or not?
         Give the reason for your answer.
-        From your \textbf{wireshark} output for when you typed very rapidly, can you see any segment that contains more than one character going from your workstation to the remote machine?
+        From your \textbf{tcpdump} output for when you typed very rapidly, can you see any segment that contains more than one character going from your workstation to the remote machine?
     \end{enumerate}
 
-    %\pagebreak
-\section*{IP Segment}
-    Issue following commands:
+\section*{Exercise on TCP bulk data flow}
+\section{IP Segment}
+    While tcpdump is running and capturing the packets between your machine and a remote machine, on the remote machine, which acts as the server, execute:
     \begin{itemize}
-        \item [h2>] \textbf{wireshark \&}
-        \item [h2>] \textbf{socket -i -s 7777}
-        \item [h1>] \textbf{socket -i -n16} \textit{10.0.0.2} \textbf{7777}
+        \item \textbf{socket -i -s 7777}
+    \end{itemize}
+    Then, on your machine, which acts as the client, execute:
+    \begin{itemize}
+        \item \textbf{socket -i -n16} \textit{remote-host} \textbf{7777}
     \end{itemize}
     Do the same experiment three times. \\
-    \underline{Save} all the \textbf{wireshark} outputs for your lab report.
+    \underline{Save} all the \textbf{tcpdump} outputs for your lab report.
     \subsection*{Report}
     \begin{enumerate}
-        \item Using one of three \textbf{wireshark} outputs, explain the operation of TCP in terms of data segments and their acknowledgements. Does the number of data segments differ from that of their acknowledgements? \\
-        Compare all the \textbf{wireshark} outputs you saved.
+        \item Using one of three \textbf{tcpdump} outputs, explain the operation of TCP in terms of data segments and their acknowledgements. Does the number of data segments differ from that of their acknowledgements? \\
+        Compare all the \textbf{tcpdump} outputs you saved.
         Discuss any differences among them, in terms of data segments and their acknowledgements.
-        \item From the \textbf{wireshark} output, how many different TCP flags can you see? Enumerate the flags and explain their meanings. \\
+        \item From the \textbf{tcpdump} output, how many different TCP flags can you see? Enumerate the flags and explain their meanings. \\
         How many different TCP options can you see?
         Explain their meanings.
     \end{enumerate}
-    
 
-    %\pagebreak
-\section*{Link Up and Down}
-    Create topology with 100 ms delay for each link and then following below steps:
+\section*{Exercises on TCP timers and retransmission}
+\section{Keepalive parameter}
+    Execute \textbf{sysctl -A | grep keepalive} to display the default values of the TCP kernel parameters that are related to the TCP keepalive timer. \\
+    \begin{enumerate}
+        \item What is the default value of the TCP keepalive timer?
+        \item What is the maximum number of TCP keepalive probes a host can send?
+    \end{enumerate}
+    \subsection*{Report}
+    Answer the above questions.
+
+\section{TCP retransmission}
+    While \textbf{tcpdump} is running to capture the packets between your host and a remote host, start a \textbf{socket} server on the remote host,
     \begin{itemize}
-    	\item [\texttt{h2>}] \textbf{socket -s 8888}
-    	\item [\texttt{h1>}] \textbf{wireshark \&}
-        \item [\texttt{h1>}] \textbf{socket -i -n1000} \textit{10.0.0.2} \textbf{8888}
+    	\item \textbf{socket -s 8888}
+    \end{itemize}
+    Then, execute the following command on your host,
+    \begin{itemize}
+        \item \textbf{socket -i -n200} \textit{host} \textbf{8888}
     \end{itemize}
     While the sender is injecting data segments into the network, disconnect the cable connecting the sender to the hub for about ten seconds. \\
     After observing several retransmissions, reconnect the cable:
     \begin{itemize}
     	\setlength{\itemindent}{30pt}
-        \item [\texttt{mininet>}] \textbf{link s1 h2 down}
+        \item \textbf{ip link eth0 down} or \textbf{ifconfig eth0 down}
         \item [-] after ten seconds...
-        \item [\texttt{mininet>}] \textbf{link s1 h2 up}
+        \item \textbf{ip link eth0 up} or \textbf{ifconfig eth0 up}
     \end{itemize}
-    When all the data segments are sent, save the \textbf{wireshark} output for the lab report.
+    When all the data segments are sent, save the \textbf{tcpdump} output for the lab report.
     \subsection*{Report}
     \begin{enumerate}
-        \item Submit the \textbf{wireshark} output saved in this exercise.
-        \item From the \textbf{wireshark} output, identify when the cable was disconnected.
+        \item Submit the \textbf{tcpdump} output saved in this exercise.
+        \item From the \textbf{tcpdump} output, identify when the cable was disconnected.
         \item Describe how the retransmission timer changes after sending each retransmitted packet, during the period when the cable was disconnected.
         \item Explain how the number of data segments that the sender transmits at once (before getting an ACK) changes after the connection is reestablished\footnote{\href{http://www.ccs-labs.org/teaching/rn/animations/gbn_sr/}{TCP Window visualizer}}.
     \end{enumerate}
     
-    %\pagebreak
-\section*{Fragmentation}
-    Execute the following command, which is similar to the command we used to find out the maximum size of a UDP datagram in previous chapter, \\
+\section*{Other exercises}
+\section{Fragmentation}
+    While tcpdump src host your host is running, execute the following command, which is similar to the command we used to find out the maximum size of a UDP datagram in previous chapter (Chapter 5),
     \begin{itemize}
-        \item [\texttt{h2>}] \textbf{wireshark \&}
-        \item [\texttt{h2>}] \textbf{socket -s 8888} 
-        \item [\texttt{h1>}] \textbf{socket -i -n1 -w}\textit{n} \textit{10.0.0.2} \textbf{8888} 
+        \item \textbf{socket -i -n1 -w}\textit{n} \textit{remote-host} \textbf{echo} 
     \end{itemize}
     Let \textit{n} be larger than the maximum UDP datagram size we found in previous chapter. \\
-    As an example, you may use n = 70080.
+    As an example, you may use $n = 70080$.
     \subsection*{Report}
     \begin{enumerate}
         \item Did you observe any IP fragmentation?
         \item If IP fragmentation did not occur this time, how do you explain this compared to what you observed in previous chapter for UDP packets?
     \end{enumerate}
-    
-\section*{Keepalive parameter}
-    Execute \textbf{sysctl -A | grep keepalive} to display the default values of the TCP kernel parameters that are related to the TCP keepalive timer. \\
-    \subsection*{Report}
-    Answer the above questions.
-	\begin{enumerate}
-		\item What is the default value of the TCP keepalive timer?
-		\item What is the maximum number of TCP keepalive probes a host can send?
-    \end{enumerate}
 
-\section*{Linux TCP/IP kernel parameter}
+\section{Linux TCP/IP kernel parameter}
     Study the manual page of \textbf{\texttt{/sbin/sysctl}}.
     Examine the default values of some TCP/IP configuration parameters that you might be interested in.
     Examine the configuration files in the \texttt{/proc/sys/net/ipv4} directory.
